Projeto terminado e implantado